# fritzscraper

./: .editorconfig  .envrc  .gitignore  README.md  flake.nix  module.nix  pyproject.toml  setup.py
fritzscraper/: collector.py  exporter.py  session.py
